# pydra-anat

./: README.md  pyproject.toml
src/pydra_anat/: cli.py  tasks.py  workflows.py
